--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 HEADLESS=0
-MAX_BROWSERS=1
-MAX_PAGES_PER_BROWSER=1
+MAX_BROWSERS=10
+MAX_PAGES_PER_BROWSER=3
 OUT_FILEPATH=out_data.csv
+DATETIME_FORMAT=%d-%m-%Y_%H-%M-%S
